--- a/lab-03-tfjob/train-app/multi_worker_with_keras.ipynb
+++ b/lab-03-tfjob/train-app/multi_worker_with_keras.ipynb
@@ -262,17 +262,17 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/3\n",
-      "70/70 [==============================] - 3s 38ms/step - loss: 2.2773 - accuracy: 0.2344\n",
+      "70/70 [==============================] - 2s 25ms/step - loss: 2.2627 - accuracy: 0.2007\n",
       "Epoch 2/3\n",
-      "70/70 [==============================] - 3s 39ms/step - loss: 2.2270 - accuracy: 0.3955\n",
+      "70/70 [==============================] - 2s 25ms/step - loss: 2.1985 - accuracy: 0.3373\n",
       "Epoch 3/3\n",
-      "70/70 [==============================] - 3s 42ms/step - loss: 2.1671 - accuracy: 0.5297\n"
+      "70/70 [==============================] - 2s 26ms/step - loss: 2.1233 - accuracy: 0.4855\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f8d57442d50>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f8b0cb49910>"
       ]
      },
      "execution_count": 7,
@@ -583,17 +583,17 @@
       "WARNING:tensorflow:From /opt/conda/lib/python3.7/site-packages/tensorflow/python/data/ops/multi_device_iterator_ops.py:601: get_next_as_optional (from tensorflow.python.data.ops.iterator_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use `tf.data.Iterator.get_next_as_optional()` instead.\n",
-      "70/70 [==============================] - 2s 26ms/step - loss: 2.2620 - accuracy: 0.2277\n",
+      "70/70 [==============================] - 1s 17ms/step - loss: 2.2417 - accuracy: 0.2504\n",
       "Epoch 2/3\n",
-      "70/70 [==============================] - 2s 28ms/step - loss: 2.1877 - accuracy: 0.4643\n",
+      "70/70 [==============================] - 1s 16ms/step - loss: 2.1172 - accuracy: 0.4960\n",
       "Epoch 3/3\n",
-      "70/70 [==============================] - 2s 31ms/step - loss: 2.0959 - accuracy: 0.5804\n"
+      "70/70 [==============================] - 1s 17ms/step - loss: 1.9771 - accuracy: 0.6295\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f8d4e0c49d0>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f8b0c95dc10>"
       ]
      },
      "execution_count": 15,
@@ -676,7 +676,8 @@
      "output_type": "stream",
      "text": [
       "main.py\n",
-      "mnist.py\n"
+      "mnist.py\n",
+      "test.py\n"
      ]
     }
    ],
@@ -794,12 +795,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-10-18 01:58:21.032959: I tensorflow/core/platform/profile_utils/cpu_utils.cc:104] CPU Frequency: 2200135000 Hz\n",
-      "2020-10-18 01:58:21.033467: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x5574cd19a850 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
-      "2020-10-18 01:58:21.033521: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
-      "2020-10-18 01:58:21.033936: I tensorflow/core/common_runtime/process_util.cc:146] Creating new thread pool with default inter op setting: 2. Tune using inter_op_parallelism_threads for best performance.\n",
-      "2020-10-18 01:58:21.043811: I tensorflow/core/distributed_runtime/rpc/grpc_channel.cc:301] Initialize GrpcChannelCache for job worker -> {0 -> localhost:12345, 1 -> localhost:23456}\n",
-      "2020-10-18 01:58:21.044226: I tensorflow/core/distributed_runtime/rpc/grpc_server_lib.cc:405] Started server with target: grpc://localhost:12345\n"
+      "2020-10-18 03:52:16.662852: W tensorflow/stream_executor/platform/default/dso_loader.cc:59] Could not load dynamic library 'libcudart.so.10.1'; dlerror: libcudart.so.10.1: cannot open shared object file: No such file or directory\n",
+      "2020-10-18 03:52:16.662923: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2020-10-18 03:52:18.063102: W tensorflow/stream_executor/platform/default/dso_loader.cc:59] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2020-10-18 03:52:18.063160: W tensorflow/stream_executor/cuda/cuda_driver.cc:312] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2020-10-18 03:52:18.063192: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (jk-dev): /proc/driver/nvidia/version does not exist\n",
+      "2020-10-18 03:52:18.063518: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN)to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2020-10-18 03:52:18.072015: I tensorflow/core/platform/profile_utils/cpu_utils.cc:104] CPU Frequency: 2200130000 Hz\n",
+      "2020-10-18 03:52:18.072396: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x563093ebd3b0 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
+      "2020-10-18 03:52:18.072446: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
+      "2020-10-18 03:52:18.079012: I tensorflow/core/distributed_runtime/rpc/grpc_channel.cc:301] Initialize GrpcChannelCache for job worker -> {0 -> localhost:12345, 1 -> localhost:23456}\n",
+      "2020-10-18 03:52:18.079347: I tensorflow/core/distributed_runtime/rpc/grpc_server_lib.cc:405] Started server with target: grpc://localhost:12345\n"
      ]
     }
    ],
@@ -858,7 +865,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Process is terminated.\n"
+      "Epoch 1/3\n",
+      "70/70 [==============================] - 6s 81ms/step - loss: 2.2822 - accuracy: 0.1316\n",
+      "Epoch 2/3\n",
+      "70/70 [==============================] - 5s 77ms/step - loss: 2.2378 - accuracy: 0.2867\n",
+      "Epoch 3/3\n",
+      "70/70 [==============================] - 5s 75ms/step - loss: 2.1872 - accuracy: 0.4203\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-10-18 03:52:38.371012: W tensorflow/stream_executor/platform/default/dso_loader.cc:59] Could not load dynamic library 'libcudart.so.10.1'; dlerror: libcudart.so.10.1: cannot open shared object file: No such file or directory\n",
+      "2020-10-18 03:52:38.371058: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2020-10-18 03:52:39.761976: W tensorflow/stream_executor/platform/default/dso_loader.cc:59] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2020-10-18 03:52:39.762024: W tensorflow/stream_executor/cuda/cuda_driver.cc:312] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2020-10-18 03:52:39.762057: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (jk-dev): /proc/driver/nvidia/version does not exist\n",
+      "2020-10-18 03:52:39.762354: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN)to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2020-10-18 03:52:39.770773: I tensorflow/core/platform/profile_utils/cpu_utils.cc:104] CPU Frequency: 2200130000 Hz\n",
+      "2020-10-18 03:52:39.771046: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x556ce0165130 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
+      "2020-10-18 03:52:39.771074: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
+      "2020-10-18 03:52:39.778488: I tensorflow/core/distributed_runtime/rpc/grpc_channel.cc:301] Initialize GrpcChannelCache for job worker -> {0 -> localhost:12345, 1 -> localhost:23456}\n",
+      "2020-10-18 03:52:39.778835: I tensorflow/core/distributed_runtime/rpc/grpc_server_lib.cc:405] Started server with target: grpc://localhost:23456\n",
+      "WARNING:tensorflow:`eval_fn` is not passed in. The `worker_fn` will be used if an \"evaluator\" task exists in the cluster.\n",
+      "WARNING:tensorflow:`eval_strategy` is not passed in. No distribution strategy will be used for evaluation.\n",
+      "2020-10-18 03:52:40.846211: W tensorflow/core/grappler/optimizers/data/auto_shard.cc:521] In AUTO-mode, and switching to DATA-based sharding, instead of FILE-based sharding as we cannot find appropriate reader dataset op(s) to shard. Error: Found an unshardable source dataset: name: \"TensorSliceDataset/_2\"\n",
+      "op: \"TensorSliceDataset\"\n",
+      "input: \"Placeholder/_0\"\n",
+      "input: \"Placeholder/_1\"\n",
+      "attr {\n",
+      "  key: \"Toutput_types\"\n",
+      "  value {\n",
+      "    list {\n",
+      "      type: DT_FLOAT\n",
+      "      type: DT_INT64\n",
+      "    }\n",
+      "  }\n",
+      "}\n",
+      "attr {\n",
+      "  key: \"output_shapes\"\n",
+      "  value {\n",
+      "    list {\n",
+      "      shape {\n",
+      "        dim {\n",
+      "          size: 28\n",
+      "        }\n",
+      "        dim {\n",
+      "          size: 28\n",
+      "        }\n",
+      "      }\n",
+      "      shape {\n",
+      "      }\n",
+      "    }\n",
+      "  }\n",
+      "}\n",
+      "\n",
+      "WARNING:tensorflow:From /opt/conda/lib/python3.7/site-packages/tensorflow/python/data/ops/multi_device_iterator_ops.py:601: get_next_as_optional (from tensorflow.python.data.ops.iterator_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.data.Iterator.get_next_as_optional()` instead.\n"
      ]
     }
    ],
@@ -878,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
     "id": "rc6hw3yTBKXX"
    },
@@ -887,15 +953,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-10-18 01:41:01.152296: I tensorflow/core/platform/profile_utils/cpu_utils.cc:104] CPU Frequency: 2200135000 Hz\n",
-      "2020-10-18 01:41:01.152594: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x55a3547a9710 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
-      "2020-10-18 01:41:01.152633: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
-      "2020-10-18 01:41:01.152897: I tensorflow/core/common_runtime/process_util.cc:146] Creating new thread pool with default inter op setting: 2. Tune using inter_op_parallelism_threads for best performance.\n",
-      "2020-10-18 01:41:01.186566: I tensorflow/core/distributed_runtime/rpc/grpc_channel.cc:301] Initialize GrpcChannelCache for job worker -> {0 -> localhost:12345, 1 -> localhost:23456}\n",
-      "2020-10-18 01:41:01.186970: I tensorflow/core/distributed_runtime/rpc/grpc_server_lib.cc:405] Started server with target: grpc://localhost:12345\n",
+      "2020-10-18 03:52:16.662852: W tensorflow/stream_executor/platform/default/dso_loader.cc:59] Could not load dynamic library 'libcudart.so.10.1'; dlerror: libcudart.so.10.1: cannot open shared object file: No such file or directory\n",
+      "2020-10-18 03:52:16.662923: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2020-10-18 03:52:18.063102: W tensorflow/stream_executor/platform/default/dso_loader.cc:59] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2020-10-18 03:52:18.063160: W tensorflow/stream_executor/cuda/cuda_driver.cc:312] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2020-10-18 03:52:18.063192: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (jk-dev): /proc/driver/nvidia/version does not exist\n",
+      "2020-10-18 03:52:18.063518: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN)to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2020-10-18 03:52:18.072015: I tensorflow/core/platform/profile_utils/cpu_utils.cc:104] CPU Frequency: 2200130000 Hz\n",
+      "2020-10-18 03:52:18.072396: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x563093ebd3b0 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
+      "2020-10-18 03:52:18.072446: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
+      "2020-10-18 03:52:18.079012: I tensorflow/core/distributed_runtime/rpc/grpc_channel.cc:301] Initialize GrpcChannelCache for job worker -> {0 -> localhost:12345, 1 -> localhost:23456}\n",
+      "2020-10-18 03:52:18.079347: I tensorflow/core/distributed_runtime/rpc/grpc_server_lib.cc:405] Started server with target: grpc://localhost:12345\n",
       "WARNING:tensorflow:`eval_fn` is not passed in. The `worker_fn` will be used if an \"evaluator\" task exists in the cluster.\n",
       "WARNING:tensorflow:`eval_strategy` is not passed in. No distribution strategy will be used for evaluation.\n",
-      "2020-10-18 01:41:23.401326: W tensorflow/core/grappler/optimizers/data/auto_shard.cc:521] In AUTO-mode, and switching to DATA-based sharding, instead of FILE-based sharding as we cannot find appropriate reader dataset op(s) to shard. Error: Found an unshardable source dataset: name: \"TensorSliceDataset/_2\"\n",
+      "2020-10-18 03:52:40.823376: W tensorflow/core/grappler/optimizers/data/auto_shard.cc:521] In AUTO-mode, and switching to DATA-based sharding, instead of FILE-based sharding as we cannot find appropriate reader dataset op(s) to shard. Error: Found an unshardable source dataset: name: \"TensorSliceDataset/_2\"\n",
       "op: \"TensorSliceDataset\"\n",
       "input: \"Placeholder/_0\"\n",
       "input: \"Placeholder/_1\"\n",
@@ -930,39 +1002,11 @@
       "Instructions for updating:\n",
       "Use `tf.data.Iterator.get_next_as_optional()` instead.\n",
       "Epoch 1/3\n",
-      "Traceback (most recent call last):\n",
-      "  File \"main.py\", line 22, in <module>\n",
-      "    multi_worker_model.fit(multi_worker_dataset, epochs=3, steps_per_epoch=70)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/tensorflow/python/keras/engine/training.py\", line 117, in _method_wrapper\n",
-      "    mode=dc.CoordinatorMode.INDEPENDENT_WORKER)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/tensorflow/python/distribute/distribute_coordinator.py\", line 860, in run_distribute_coordinator\n",
-      "    task_id, session_config, rpc_layer)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/tensorflow/python/distribute/distribute_coordinator.py\", line 360, in _run_single_worker\n",
-      "    return worker_fn(strategy)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/tensorflow/python/keras/engine/training.py\", line 115, in <lambda>\n",
-      "    lambda _: method(self, *args, **kwargs),\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/tensorflow/python/keras/engine/training.py\", line 1098, in fit\n",
-      "    tmp_logs = train_function(iterator)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/tensorflow/python/eager/def_function.py\", line 780, in __call__\n",
-      "    result = self._call(*args, **kwds)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/tensorflow/python/eager/def_function.py\", line 840, in _call\n",
-      "    return self._stateless_fn(*args, **kwds)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/tensorflow/python/eager/function.py\", line 2829, in __call__\n",
-      "    return graph_function._filtered_call(args, kwargs)  # pylint: disable=protected-access\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/tensorflow/python/eager/function.py\", line 1848, in _filtered_call\n",
-      "    cancellation_manager=cancellation_manager)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/tensorflow/python/eager/function.py\", line 1924, in _call_flat\n",
-      "    ctx, args, cancellation_manager=cancellation_manager))\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/tensorflow/python/eager/function.py\", line 550, in call\n",
-      "    ctx=ctx)\n",
-      "  File \"/opt/conda/lib/python3.7/site-packages/tensorflow/python/eager/execute.py\", line 60, in quick_execute\n",
-      "    inputs, attrs, num_outputs)\n",
-      "tensorflow.python.framework.errors_impl.InvalidArgumentError:  Upper bound check fail for input 5 from node Mkl2Tf/_30 to node scoped_allocator_concat_1_4 input bounds = [0x7f49f8033980, 0x7f49f8033a00] backing_tensor bounds = [0x7f4958f29040, 0x7f49599bab80]\n",
-      "\t [[{{node scoped_allocator_concat_1_4}}]] [Op:__inference_train_function_722]\n",
-      "\n",
-      "Function call stack:\n",
-      "train_function\n",
-      "\n"
+      "70/70 [==============================] - 6s 81ms/step - loss: 2.2822 - accuracy: 0.1316\n",
+      "Epoch 2/3\n",
+      "70/70 [==============================] - 5s 77ms/step - loss: 2.2378 - accuracy: 0.2867\n",
+      "Epoch 3/3\n",
+      "70/70 [==============================] - 5s 75ms/step - loss: 2.1872 - accuracy: 0.4203\n"
      ]
     }
    ],
@@ -1371,9 +1415,9 @@
    "toc_visible": true
   },
   "environment": {
-   "name": "tf2-2-3-gpu.2-3.m56",
+   "name": "common-cpu.m56",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/tf2-2-3-gpu.2-3:m56"
+   "uri": "gcr.io/deeplearning-platform-release/base-cpu:m56"
   },
   "kernelspec": {
    "display_name": "Python 3",
